Google_Search_Consoleの追加

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="uGmjiEvSFojtxkyhqtWlLOGJ6_CPGg1Cxvzj4anpeLc" />
     <title>上野山設備</title>
   </head>
   <body>
