--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <meta name="google-site-verification" content="uGmjiEvSFojtxkyhqtWlLOGJ6_CPGg1Cxvzj4anpeLc" />
+    <meta name="author" content="上野山設備">
+    <meta name="description" content="上野山設備">
     <title>上野山設備</title>
   </head>
   <body>
