--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="google-site-verification" content="uGmjiEvSFojtxkyhqtWlLOGJ6_CPGg1Cxvzj4anpeLc" />
     <meta name="author" content="上野山設備">
     <meta name="description" content="上野山設備">
+    <meta name="keywords" content="上野山設備">
     <title>上野山設備</title>
   </head>
   <body>
