アクセス・お問い合わせの追加

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
   </head>
   <body>
     <h1>上野山設備</h1>
+    <h2>アクセス</h2>
+    <p>〒649-0313 和歌山県有田市千田１９０９</p>
+    <h2>お問い合わせ</h2>
+    <p>0737-82-2980</p>
   </body>
 </html>
